--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Install Docker CLI
       run: |
         sudo apt-get update
-        sudo apt-get install -y docker.io
+        docker version
         pwd
     - name: Copy Docker certs to the remote machine
       run: |
