[Add] container name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env: 
+      COMPOSE_PROJECT_NAME: ${{ github.repository_owner }}-${{ github.event.repository.name }}-${{github.ref_name }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
