--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,5 @@ jobs:
         export DOCKER_HOST=tcp://13.239.21.231:2376
         export DOCKER_TLS_VERIFY=1
         export DOCKER_CERT_PATH=/home/runner/work/.docker
+        export COMPOSE_PROJECT_NAME=${{ env.COMPOSE_PROJECT_NAME }}
         docker-compose up -d --build
