--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,4 @@ jobs:
         export DOCKER_TLS_VERIFY=1
         export DOCKER_CERT_PATH=/home/runner/work/.docker
         echo ${{ env.COMPOSE_PROJECT_NAME }}
-        export COMPOSE_PROJECT_NAME=${{ env.COMPOSE_PROJECT_NAME }}
-        docker-compose up -d --build
+        docker-compose -p ${{ env.COMPOSE_PROJECT_NAME }} up -d --build
