--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,5 @@ jobs:
         export DOCKER_TLS_VERIFY=1
         export DOCKER_CERT_PATH=/home/runner/work/.docker
         echo ${{ env.COMPOSE_PROJECT_NAME }}
-        docker-compose -p ${{ env.COMPOSE_PROJECT_NAME }} up -d --build
+        export COMPOSE_PROJECT_NAME=${{ env.COMPOSE_PROJECT_NAME }}
+        docker compose up -d --build
