--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,26 @@ services:
     build: .
     container_name: hapi-fhir-au
     restart: on-failure
+    environment:
+      SPRING_DATASOURCE_URL: "jdbc:postgresql://hapi-fhir-postgresa:5432/hapi-fhir-au"
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      SPRING_DATASOURCE_DRIVERCLASSNAME: "org.postgresql.Driver"
+      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: "ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect"
     ports:
       - "8080:8080"
+    depends_on:
+      - hapi-fhir-postgres
+
   hapi-fhir-postgres:
-    image: postgres:16-alpine
+    build:
+      context: .
+      dockerfile: Postgres.Dockerfile
     container_name: hapi-fhir-postgres
     restart: always
     environment:
       POSTGRES_DB: "hapi-fhir-au"
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - hapi-fhir-postgres:/var/lib/postgresql/data
-volumes:
-  hapi-fhir-postgres:
-
+    ports:
+      - "5432:5432"
