--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,31 @@
 #Uncomment the "servlet" and "context-path" lines below to make the fhir endpoint available at /example/path/fhir instead of the default value of /fhir
 server:
-  #  servlet:
-  #    context-path: /example/path
+#  servlet:
+#    context-path: /example/path
   port: 8080
 #Adds the option to go to eg. http://localhost:8080/actuator/health for seeing the running configuration
 #see https://docs.spring.io/spring-boot/docs/current/reference/html/actuator.html#actuator.endpoints
 management:
-  endpoints:
-    web:
-      exposure:
-        include: "health,prometheus"
+  endpoint:
+    endpoints:
+      enabled-by-default: false
+      web:
+        exposure:
+          include: health,prometheus
+    health:
+      enabled: true
+      probes:
+        enabled: true
+      livenessState:
+        enabled: true
+      readinessState:
+        enabled: true
+    prometheus:
+      enabled: true
+      metrics:
+        export:
+          enabled: true
+
 spring:
   main:
     allow-circular-references: true
@@ -19,11 +35,15 @@ spring:
     baselineOnMigrate: true
     fail-on-missing-locations: false
   datasource:
-    #url: 'jdbc:h2:file:./target/database/aucore3'
-    url: jdbc:h2:mem:test_mem1
-    username: sa
-    password: null
-    driverClassName: org.h2.Driver
+    #url: 'jdbc:h2:file:./target/database/h2'
+    #url: jdbc:h2:mem:test_mem
+    url: jdbc:postgresql://localhost:5432/hapi-fhir-au
+    #username: sa
+    #password: null
+    username: hapi
+    password: hapi123123    
+    #driverClassName: org.h2.Driver
+    driverClassName: org.postgresql.Driver
     max-active: 15
 
     # database connection pool size
@@ -36,29 +56,29 @@ spring:
 
       #Hibernate dialect is automatically detected except Postgres and H2.
       #If using H2, then supply the value of ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
-      #If using postgres, then supply the value of ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
-      hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
-      #      hibernate.hbm2ddl.auto: update
-      #      hibernate.jdbc.batch_size: 20
-      #      hibernate.cache.use_query_cache: false
-      #      hibernate.cache.use_second_level_cache: false
-      #      hibernate.cache.use_structured_entries: false
-      #      hibernate.cache.use_minimal_puts: false
+      #If using postgres, then supply the value of ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgresDialect
+      #hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
+      hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgresDialect
+  #      hibernate.hbm2ddl.auto: update
+  #      hibernate.jdbc.batch_size: 20
+  #      hibernate.cache.use_query_cache: false
+  #      hibernate.cache.use_second_level_cache: false
+  #      hibernate.cache.use_structured_entries: false
+  #      hibernate.cache.use_minimal_puts: false
 
-      ###    These settings will enable fulltext search with lucene or elastic
-      hibernate.search.enabled: true
+  ###    These settings will enable fulltext search with lucene or elastic
+      hibernate.search.enabled: false
   ### lucene parameters
-  #      hibernate.search.backend.type: lucene
-  #      hibernate.search.backend.analysis.configurer: ca.uhn.fhir.jpa.search.HapiHSearchAnalysisConfigurers$HapiLuceneAnalysisConfigurer
-  #      hibernate.search.backend.directory.type: local-filesystem
-  #      hibernate.search.backend.directory.root: target/lucenefiles
-  #      hibernate.search.backend.lucene_version: lucene_current
+#      hibernate.search.backend.type: lucene
+#      hibernate.search.backend.analysis.configurer: ca.uhn.fhir.jpa.search.HapiHSearchAnalysisConfigurers$HapiLuceneAnalysisConfigurer
+#      hibernate.search.backend.directory.type: local-filesystem
+#      hibernate.search.backend.directory.root: target/lucenefiles
+#      hibernate.search.backend.lucene_version: lucene_current
   ### elastic parameters ===> see also elasticsearch section below <===
 #      hibernate.search.backend.type: elasticsearch
 #      hibernate.search.backend.analysis.configurer: ca.uhn.fhir.jpa.search.HapiHSearchAnalysisConfigurers$HapiElasticAnalysisConfigurer
 hapi:
   fhir:
-    #enable_repository_validating_interceptor: true
     ### This flag when enabled to true, will avail evaluate measure operations from CR Module.
     ### Flag is false by default, can be passed as command line argument to override.
     cr:
@@ -73,7 +93,7 @@ hapi:
     ### This is the FHIR version. Choose between, DSTU2, DSTU3, R4 or R5
     fhir_version: R4
     ### Flag is false by default. This flag enables runtime installation of IG's.
-    ig_runtime_upload_enabled: true
+    ig_runtime_upload_enabled: false
     ### This flag when enabled to true, will avail evaluate measure operations from CR Module.
 
     ### enable to use the ApacheProxyAddressStrategy which uses X-Forwarded-* headers
@@ -93,18 +113,53 @@ hapi:
     #    defer_indexing_for_codesystems_of_size: 101
     #install_transitive_ig_dependencies: true
     #implementationguides:
-
-    #  au-core:
-    #    name: hl7.fhir.au.core
-    #    version: 0.4.0-ci-build
+    #  hl7-fhir-r4-core:
+    #    name: hl7.fhir.r4.core
+    #    version: 4.0.1
     #    reloadExisting: false
     #    installMode: STORE_AND_INSTALL
-    #    packageUrl: https://build.fhir.org/ig/hl7au/au-fhir-core/package.tgz
+    #    fetchDependencies: true
+    #  hl7-terminology-r4:
+    #    name: hl7.terminology.r4
+    #    version: 5.5.0
+    #    reloadExisting: false
+    #    installMode: STORE_AND_INSTALL
+    #    fetchDependencies: true
+    #  hl7-fhir-uv-extensions-r4:
+    #    name: hl7.fhir.uv.extensions.r4
+    #    version: 5.1.0
+    #    reloadExisting: false
+    #    installMode: STORE_AND_INSTALL
+    #    fetchDependencies: true
+    #  hl7-fhir-au-base:
+    #    name: hl7.fhir.au.base
+    #    version: 4.2.1-preview
+    #    reloadExisting: false
+    #    installMode: STORE_AND_INSTALL
+    #    fetchDependencies: true
+    #  hl7-fhir-uv-smart-app-launch:
+    #    name: hl7.fhir.uv.smart-app-launch
+    #    version: 2.2.0
+    #    reloadExisting: false
+    #    installMode: STORE_AND_INSTALL
+    #    fetchDependencies: false        
+    #  hl7-fhir-uv-ipa:
+    #    name: hl7.fhir.uv.ipa
+    #    version: 1.0.0
+    #    reloadExisting: false
+    #    installMode: STORE_AND_INSTALL
+    #    fetchDependencies: true
+    #  au-core:
+    #    name: hl7.fhir.au.core
+    #    version: 0.4.0-preview
+    #    reloadExisting: false
+    #    installMode: STORE_AND_INSTALL
+    #    packageUrl: https://hl7.org.au/fhir/core/0.4.0-preview/package.tgz
+    #    fetchDependencies: false     
 
-
-      #supported_resource_types:
-      #  - Patient
-      #  - Observation
+    #    supported_resource_types:
+    #      - Patient
+    #      - Observation
     ##################################################
     # Allowed Bundle Types for persistence (defaults are: COLLECTION,DOCUMENT,MESSAGE)
     ##################################################
@@ -115,6 +170,7 @@ hapi:
     #    allow_multiple_delete: true
     #    allow_override_default_search_params: true
     #    auto_create_placeholder_reference_targets: false
+    #    mass_ingestion_mode_enabled: false
     ### tells the server to automatically append the current version of the target resource to references at these paths
     #    auto_version_reference_at_paths: Device.patient, Device.location, Device.parent, DeviceMetric.parent, DeviceMetric.source, Observation.device, Observation.subject
     #    ips_enabled: false
@@ -126,6 +182,7 @@ hapi:
     #    enable_index_missing_fields: false
     #    enable_index_of_type: true
     #    enable_index_contained_resource: false
+    #    resource_dbhistory_enabled: false
     ###  !!Extended Lucene/Elasticsearch Indexing is still a experimental feature, expect some features (e.g. _total=accurate) to not work as expected!!
     ###  more information here: https://hapifhir.io/hapi-fhir/docs/server_jpa/elastic.html
     advanced_lucene_indexing: false
@@ -171,20 +228,20 @@ hapi:
     search-coord-core-pool-size: 20
     search-coord-max-pool-size: 100
     search-coord-queue-capacity: 200
-
+    
     # comma-separated package names, will be @ComponentScan'ed by Spring to allow for creating custom Spring beans
     #custom-bean-packages:
+    
+    # comma-separated list of fully qualified interceptor classes. 
+    # classes listed here will be fetched from the Spring context when combined with 'custom-bean-packages', 
+    # or will be instantiated via reflection using an no-arg contructor; then registered with the server  
+    #custom-interceptor-classes:  
 
-    # comma-separated list of fully qualified interceptor classes.
-    # classes listed here will be fetched from the Spring context when combined with 'custom-bean-packages',
-    # or will be instantiated via reflection using an no-arg contructor; then registered with the server
-    #custom-interceptor-classes:
-
-    # comma-separated list of fully qualified provider classes.
-    # classes listed here will be fetched from the Spring context when combined with 'custom-bean-packages',
-    # or will be instantiated via reflection using an no-arg contructor; then registered with the server
-    #custom-provider-classes:
-
+    # comma-separated list of fully qualified provider classes. 
+    # classes listed here will be fetched from the Spring context when combined with 'custom-bean-packages', 
+    # or will be instantiated via reflection using an no-arg contructor; then registered with the server  
+    #custom-provider-classes:  
+    
     # Threadpool size for BATCH'ed GETs in a bundle.
     #    bundle_batch_pool_size: 10
     #    bundle_batch_pool_max_size: 50
@@ -213,12 +270,11 @@ hapi:
         server_address: "http://hapi.fhir.org/baseR4"
         refuse_to_fetch_third_party_urls: false
         fhir_version: R4
-    #validation:
-    #  requests_enabled: true
+    #    validation:
+    #      requests_enabled: true
     #      responses_enabled: true
     #    binary_storage_enabled: true
     inline_resource_storage_below_size: 4000
-    enable-repository-validating-interceptor: true
 #    bulk_export_enabled: true
 #    subscription:
 #      resthook_enabled: true
