--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -34,8 +34,8 @@ spring:
     baselineOnMigrate: true
     fail-on-missing-locations: false
   datasource:
-    #url: 'jdbc:h2:file:./target/database/h2'
-    url: jdbc:h2:mem:test_mem
+    url: 'jdbc:h2:file:./target/database/h2'
+    #url: jdbc:h2:mem:test_mem
     username: sa
     password: null
     driverClassName: org.h2.Driver
@@ -149,49 +149,13 @@ hapi:
     #    defer_indexing_for_codesystems_of_size: 101
     #install_transitive_ig_dependencies: true
     #implementationguides:
-    #  hl7-fhir-r4-core:
-    #    name: hl7.fhir.r4.core
-    #    version: 4.0.1
-    #    reloadExisting: false
-    #    installMode: STORE_AND_INSTALL
-    #    fetchDependencies: true
-    #  hl7-terminology-r4:
-    #    name: hl7.terminology.r4
-    #    version: 5.5.0
-    #    reloadExisting: false
-    #    installMode: STORE_AND_INSTALL
-    #    fetchDependencies: true
-    #  hl7-fhir-uv-extensions-r4:
-    #    name: hl7.fhir.uv.extensions.r4
-    #    version: 5.1.0
-    #    reloadExisting: false
-    #    installMode: STORE_AND_INSTALL
-    #    fetchDependencies: true
-    #  hl7-fhir-au-base:
-    #    name: hl7.fhir.au.base
-    #    version: 4.2.1-preview
-    #    reloadExisting: false
-    #    installMode: STORE_AND_INSTALL
-    #    fetchDependencies: true
-    #  hl7-fhir-uv-smart-app-launch:
-    #    name: hl7.fhir.uv.smart-app-launch
-    #    version: 2.2.0
-    #    reloadExisting: false
-    #    installMode: STORE_AND_INSTALL
-    #    fetchDependencies: false        
-    #  hl7-fhir-uv-ipa:
-    #    name: hl7.fhir.uv.ipa
-    #    version: 1.0.0
-    #    reloadExisting: false
-    #    installMode: STORE_AND_INSTALL
-    #    fetchDependencies: true
     #  au-core:
     #    name: hl7.fhir.au.core
-    #    version: 0.4.0-preview
-    #    reloadExisting: false
+    #    version: 1.0.0-ballot
+    #    reloadExisting: true
     #    installMode: STORE_AND_INSTALL
-    #    packageUrl: https://hl7.org.au/fhir/core/0.4.0-preview/package.tgz
-    #    fetchDependencies: false     
+    #    packageUrl: https://hl7.org.au/fhir/core/1.0.0-ballot/package.tgz
+    #    fetchDependencies: true
 
     #    supported_resource_types:
     #      - Patient
