--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -34,11 +34,11 @@ spring:
     baselineOnMigrate: true
     fail-on-missing-locations: false
   datasource:
-    url: 'jdbc:h2:file:./target/database/h2'
+    url: 'jdbc:postgresql://hapi-fhir-postgres:5432/hapi-fhir-au'
     #url: jdbc:h2:mem:test_mem
-    username: sa
-    password: null
-    driverClassName: org.h2.Driver
+    username: hapi
+    password: hapi123
+    driverClassName: org.postgresql.Driver
     max-active: 15
 
     # database connection pool size
@@ -52,7 +52,7 @@ spring:
       #Hibernate dialect is automatically detected except Postgres and H2.
       #If using H2, then supply the value of ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
       #If using postgres, then supply the value of ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgresDialect
-      hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
+      hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgresDialect
 
   #      hibernate.hbm2ddl.auto: update
   #      hibernate.jdbc.batch_size: 20
