--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -159,7 +159,7 @@ hapi:
         version: 1.0.0-ci-build
         reloadExisting: true
         installMode: STORE_AND_INSTALL
-        packageUrl: https://hl7.org.au/fhir/core/1.0.0-ci-build/package.tgz
+        packageUrl: https://build.fhir.org/ig/hl7au/au-fhir-core/package.tgz
         fetchDependencies: true
 
     ### Flag is true by default. This flag filters resources during package installation, allowing only those resources with a valid status (e.g. active) to be installed.
