--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -156,10 +156,10 @@ hapi:
     implementationguides:
       au-core:
         name: hl7.fhir.au.core
-        version: 1.0.0-ci-build
+        version: 1.0.0-preview
         reloadExisting: true
         installMode: STORE_AND_INSTALL
-        packageUrl: https://build.fhir.org/ig/hl7au/au-fhir-core/package.tgz
+        packageUrl: https://hl7.org.au/fhir/core/1.0.0-preview/package.tgz
         fetchDependencies: true
 
     ### Flag is true by default. This flag filters resources during package installation, allowing only those resources with a valid status (e.g. active) to be installed.
